...
                    .focused($focusedField, equals: .interestRate)
                }
                .onChange(of: focusedField) { oldValue, newValue in
                    onFocusChange(newValue)
                }
            }
            .navigationTitle("Savings Calculator")
            .padding()
            .navigationTitle("Savings Inputs")
            .onAppear { configureDefaultValues() }
            .navigationDestination(item: $result) { result in
                SavingsResultsView(result: result)
            }
            .safeAreaInset(edge: .bottom) {
                Button {  calculate() } label: {
                    Text("Calculate")
                        .font(.headline)
                        .foregroundStyle(.white)
                        .frame(width: 360, height: 48)
                        .background(.blue)
                        .clipShape(.rect(cornerRadius: 10))
                }
...
